--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif;
-  background-color: rgb(6, 153, 18);
+  background-image: url("./images/1514_KennyDeath.gif.crdownload");
   padding: 60px;
   resize: both;
 }
